--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -49,13 +49,12 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
-			<version>0.11.1</version>
+			<version>0.11.2</version> <!-- Sử dụng phiên bản phù hợp -->
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.1</version>
-			<scope>runtime</scope>
+			<version>0.11.2</version> <!-- Sử dụng phiên bản phù hợp -->
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
