--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>jjwt-impl</artifactId>
 			<version>0.11.2</version> <!-- Sử dụng phiên bản phù hợp -->
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.1</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
