--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.cloud.gateway.discovery.locator.enabled=true
 server.port=8803
 
 #jwt
-jwt.secret-=----------------------------------abcdefghijklmnopsdgsjghsjsjd---------------------------------
+jwt.secret=----------------------------------abcdefghijklmnopsdgsjghsjsjd---------------------------------
+jwt.expiration=86400
 # eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.main.allow-bean-definition-overriding=true
